--- a/web/web/style/style.css
+++ b/web/web/style/style.css
@@ -1,6 +1,13 @@
 .bs-example{
 	margin: 20px;
 }
+#map-canvas {
+	width: 640px;
+	height: 480px;
+	margin: 0px;
+	padding: 0px;
+	right: 20px;
+}
 
 .voffset-10  {
 	margin-top: 10px;
