--- a/web/web/style/style.css
+++ b/web/web/style/style.css
@@ -30,7 +30,7 @@ body {
 	padding:0;
 	height:100%;
 }
-#container {
+#wrape {
 	min-height:100%;
 	position:relative;
 }
@@ -44,6 +44,6 @@ body {
 #footer {
 	position:absolute;
 	bottom:70px;
-	width:100%;
+	width:99%;
 	height:40px;   /* Height of the footer */
 }
