--- a/web/web/style/style.css
+++ b/web/web/style/style.css
@@ -3,12 +3,11 @@
 	margin: 20px;
 
 }
+
 #map-canvas {
-	width: 640px;
-	height: 480px;
-	margin: 0px;
-	padding: 0px;
-	right: 20px;
+	width: 90%;
+	height: 500px;
+	margin: 15px auto;
 }
 
 .voffset-10  {
@@ -30,26 +29,24 @@ body {
 	margin:0;
 	padding:0;
 	height:100%;
+	background-color: #f5f5f5
 }
 #wrap {
-	min-height:95%;
-	width:98%;
+	min-height:100%;
 	position:relative;
+	background-color: #f5f5f5
 }
 #header {
-	padding:0px;
+
 }
 #body {
-	padding:5px;
-	padding-bottom:70px;   /* Height of the footer */
+	background-color: #f5f5f5
 }
 #footer {
-	position:absolute;
-	bottom:40px;
-	width:98.5%;
-	height:40px;   /* Height of the footer */
+	width:100%;
+	bottom: 0;
+	margin-top: 3em;
 }
-
 
 
 /*
@@ -178,4 +175,9 @@ Image credits: unsplash.com
 }
 @media screen and (max-width: 640px){
 	.hero h1 { font-size: 4em; }
+}
+
+#logo{
+	width: 25%;
+	height: auto;
 }
