--- a/web/web/style/style.css
+++ b/web/web/style/style.css
@@ -6,7 +6,7 @@
 
 #map-canvas {
 	width: 90%;
-	height: 500px;
+	height: 350px;
 	margin: 15px auto;
 }
 
@@ -45,7 +45,7 @@ body {
 #footer {
 	width:100%;
 	bottom: 0;
-	margin-top: 3em;
+	position: absolute;
 }
 
 
