--- a/web/web/style/style.css
+++ b/web/web/style/style.css
@@ -180,3 +180,13 @@ Image credits: unsplash.com
 	width: 30%;
 	height: auto;
 }
+
+#logo_about{
+	width: 50%;
+	height: auto;
+}
+
+#logo_min{
+	width: 12%;
+	height: auto;
+}
